--- a/src/app/core/material-component/material-component.component.html
+++ b/src/app/core/material-component/material-component.component.html
@@ -1,3 +1,4 @@
+<!-- eslint-disable @angular-eslint/template/label-has-associated-control -->
 <mat-card class="example-card">
   <mat-card-content>
     <h2 class="example-h2">Progress bar configuration</h2>
@@ -20,19 +21,19 @@
       </mat-radio-group>
     </section>
 
-    @if (mode === 'determinate' || mode === 'buffer') {
+    @if (mode === "determinate" || mode === "buffer") {
       <section class="example-section">
         <label class="example-margin">Progress:</label>
         <mat-slider class="example-margin">
-          <input type="range" [(ngModel)]="value" matSliderThumb>
+          <input type="range" [(ngModel)]="value" matSliderThumb />
         </mat-slider>
       </section>
     }
-    @if (mode === 'buffer') {
+    @if (mode === "buffer") {
       <section class="example-section">
         <label class="example-margin">Buffer:</label>
         <mat-slider class="example-margin">
-          <input type="range" [(ngModel)]="bufferValue" matSliderThumb>
+          <input type="range" [(ngModel)]="bufferValue" matSliderThumb />
         </mat-slider>
       </section>
     }
@@ -45,10 +46,11 @@
 
     <section class="example-section">
       <mat-progress-bar
-          class="example-margin"
-          [mode]="mode"
-          [value]="value"
-          [bufferValue]="bufferValue">
+        class="example-margin"
+        [mode]="mode"
+        [value]="value"
+        [bufferValue]="bufferValue"
+      >
       </mat-progress-bar>
     </section>
   </mat-card-content>
